# AiiDA_script

./: README.md
aiida_make_script/aiida_diff/: launch.ipynb  launch.py  pyproject.toml
aiida_make_script/aiida_diff/aiida_diff_tutorial/: calculations.py  parsers.py
aiida_make_script/aiida_diff/input_files/: file1.txt  file2.txt
aiida_make_script/aiida_ls/: launch.ipynb  launch_List.ipynb  pyproject.toml
aiida_make_script/aiida_ls/aiida_ls_tutorial/: calculations.py  parsers.py
aiida_mlip_sample/: geometry-optimisation.ipynb
interactive_aiida_cryspy_sample/: lammps_optimization_WorkChain.ipynb  potential.txt
interactive_aiida_cryspy_sample/EA/: cryspy.stat
interactive_aiida_cryspy_sample/EA/data/: cryspy_rslt_energy_asc  init_POSCARS  opt_CIFS.cif
interactive_aiida_cryspy_sample/EA/lammps/: cryspy_analyzer_EA.ipynb  err_cryspy  log_cryspy
interactive_aiida_cryspy_sample/EA/mlip/: log_cryspy
interactive_aiida_cryspy_sample/RS/: lammps_optimization_WorkChain_RS.ipynb
interactive_aiida_cryspy_sample/RS/QE/: QE_optimization_WorkChain_RS.ipynb  cryspy.in  log_cryspy
interactive_aiida_cryspy_sample/RS/data/: cryspy_rslt  opt_CIFS.cif  opt_POSCARS
interactive_aiida_cryspy_sample/RS/lammps/: cryspy.stat
interactive_aiida_cryspy_sample/RS/mlip/: chgnet_optimization_WorkChain_RS.ipynb  cryspy.in  log_cryspy
interactive_aiida_cryspy_sample/data/: cryspy_rslt  cryspy_rslt_energy_asc  init_POSCARS  opt_CIFS.cif  opt_POSCARS
interactive_aiida_cryspy_sample/data/pkl_data/: init_struc_data.pkl  input_data.pkl  opt_struc_data.pkl  rslt_data.pkl
(+129 files in other folders)
