[build-system]
# build the package with [flit](https://flit.readthedocs.io)
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
# See https://www.python.org/dev/peps/pep-0621/
name = "aiida-ls-tutorial"
version = "0.1.0"
description = "AiiDA demo plugin"
dependencies = [
    "aiida-core>=2.0,<3",
]

[project.entry-points."aiida.calculations"]
"ls-tutorial" = "aiida_ls_tutorial.calculations:lsCalculation"

[project.entry-points."aiida.parsers"]
"ls-tutorial" = "aiida_ls_tutorial.parsers:lsParser"

[tool.flit.module]
name = "aiida_ls_tutorial"